Move tests back into core module and remove unused parts of parent POM